# codex-glm-proxy

./: .gitignore  LICENSE  README.md  codex-glm-proxy.cmd  pyproject.toml
docs/superpowers/plans/: 2026-06-25-context-usage-fix.md
docs/superpowers/specs/: 2026-06-25-context-usage-fix-design.md
scripts/: .env.example  ax.cmd  axf.cmd  axg.cmd  axgf.cmd  axgs.cmd  axs.cmd  codex-glm.cmd  codex.sh
src/codex_glm_proxy/: __init__.py  cli.py  request_transform.py  response_transform.py  server.py
tests/: test_cli.py  test_request_transform.py  test_response_transform.py  test_server.py
